--- a/lib/railsbricks/foundation/public/404.html
+++ b/lib/railsbricks/foundation/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+<title><%= t('error.not_found') %></title>
   <style>
   body {
     background-color: #EFEFEF;
